# matrix-irc-monitor

./: Cargo.nix  Cargo.toml  crate-hashes.json
src/: login.rs  main.rs  watch_stream.rs
